<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment2_color"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Fragment2">


    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/Fragment2_welcome"
        android:textColor="@color/mainText_color"
        android:textSize="32sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/x_input"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:hint="@string/new_name_editTxt"
        android:inputType="text"/>


    <EditText
        android:id="@+id/y_input"
        android:autofillHints="name"
        android:layout_height="50dp"
        android:layout_width="150dp"
        android:hint="@string/new_age_editTxt"
        android:inputType="text"/>
    <Button
        android:id="@+id/f2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_btn" />
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_btn" />


</LinearLayout>