<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment1_color"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Fragment1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fragment1_welcome"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/mainText_color"
            android:fontFamily="sans-serif-light">

        </TextView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:prompt="@string/option_select"
            android:spinnerMode="dropdown" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/blank_txt"/>


        <TextView
            android:id="@+id/resultOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/backgroundText_color"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"

            android:text="@string/blank_txt" />

        <TextView
            android:id="@+id/resultAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/backgroundText_color"
            android:layout_marginBottom="30dp"
            android:text="@string/blank_txt" />
        <Button
            android:id="@+id/f1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Edit_btn"
            android:layout_marginBottom="10dp"
            android:textColor="@color/mainText_color"
            android:background="@color/fragment1_background_elements"/>


        <Button
            android:id="@+id/proceed_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="locationOnStart"
            android:text="@string/proceed_btn"
            android:textColor="@color/mainText_color"
            android:background="@color/fragment1_background_elements"/>


</LinearLayout>